--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/e-commerce-db
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Admin
 server.port=8080
