--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "vue": "^3.5.10",
+    "vue3-cookies": "^1.0.6",
     "vuetify": "^3.7.3"
   },
   "devDependencies": {
