--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,2 @@
-VITE_BASE_URL=http://localhost:3000/
-
-VITE_PAYROLL_BACKEND_SERVER = localhost
-VITE_PAYROLL_BACKEND_PORT = 8080
+VITE_BACKEND_SERVER = localhost
+VITE_BACKEND_PORT = 8080
