--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "vue": "^3.5.10",
     "vue-router": "^4.4.5",
     "vue3-cookies": "^1.0.6",
-    "vuetify": "^3.7.3"
+    "vuetify": "^3.7.3",
+    "vuex": "^4.1.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
